--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saketh Reddy</title>
+    <title>Farookhi Sohali</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -48,15 +48,13 @@
           <div class="row">
             <div class="home-content">
                 <div class="text-1">Hello, My Name Is</div>
-                <div class="text-2">Saketh Reddy</div>
+                <div class="text-2">Farookhi Sohali</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/k-saketh-reddy-b7b64922a" target="_blank"> <i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
-                    <a href="https://github.com/sakethreddy21" target="_blank"> <i class="fab fa-github" aria-hidden="true"></i></a>
-                    <a href="https://www.kaggle.com/ksakethreddy" target="_blank"> <i class="fab fa-kaggle" aria-hidden="true"></i></a>
-                    <a href="https://medium.com/@ksakethreddyreddy" target="_blank"> <i class="fab fa-medium" aria-hidden="true"></i></a>
-                    <a href="https://www.instagram.com/it_is_me_saketh/?igshid=NjZiMGI4OTY%3D" target="_blank"> <i class="fab fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/farookhi-soha-252891225" target="_blank"> <i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
+                    <a href="https://github.com/FarookhiSohali" target="_blank"> <i class="fab fa-github" aria-hidden="true"></i></a>
+                    <a href="https://instagram.com/sohaa_ly04?igshid=YmMyMTA2M2Y=" target="_blank"> <i class="fab fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
           </div>
@@ -71,8 +69,8 @@
                     <img src="images\About.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Hi, I'm Saketh Reddy</div>
-                    <p>I am a Sophomore at SRM Institute of Science and Technology, pursuing B.Tech in Artificial Intelligence. My pronouns are he/him and I strive to learn something new everyday, polish my skills, travel and surround myself with like minded people.
+                    <div class="text">Hi, I'm Farookhi Sohali</div>
+                    <p>I am a Sophomore at SRM Institute of Science and Technology, pursuing B.Tech in Computer science. My pronouns are she/her and I strive to learn something new everyday, polish my skills, travel and surround myself with like minded people.
                         I am an aspiring Full stack Data Scientist and interested in UIUX designing. I am a competent coder and invest majorly in the field of Artificial Intelligence in healthcare. 
                     </p>
                     <br>
@@ -127,49 +125,49 @@
                     <div class="bars">
                         <div class="info">
                             <span>Python</span>
-                            <span>80%</span>
+                            <span>40%</span>
                         </div>
                         <div class="line java"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>C</span>
-                            <span>80%</span>
+                            <span>75%</span>
                         </div>
                         <div class="line py"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>HTML</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line tf"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Dart</span>
                             <span>50%</span>
                         </div>
                         <div class="line tf"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
+                            <span>Dart</span>
+                            <span>25%</span>
+                        </div>
+                        <div class="line tf"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
                             <span>C++</span>
-                            <span>60%</span>
+                            <span>75%</span>
                         </div>
                         <div class="line tf"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>70%</span>
+                            <span>45%</span>
                         </div>
                         <div class="line tf"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>60%</span>
+                            <span>25%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
@@ -224,25 +222,25 @@
                         <i class="fas fa-user"></i>
                         <div class="info">
                             <div class="head">Name</div>
-                            <div class="sub-title">Saketh Reddy</div>
+                            <div class="sub-title">Farookhi Sohali</div>
                         </div>
                     </div>
                     <div class="row">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="info">
                             <div class="head">Address</div>
-                            <div class="sub-title">Hyderabad, India</div>
+                            <div class="sub-title">Chennai, India</div>
                         </div>
                     </div>
                     <div class="row">
                         <i class="fas fa-envelope"></i>
                         <div class="info">
                             <div class="head">Email</div>
-                            <div class="sub-title">ksakethreddyreddy@gmail.com</div>
+                            <div class="sub-title">sohafarookhi@gmail.com</div>
                         </div>
                         <div class="info">
                             <div class="head">Contact Number: </div>
-                            <div class="sub-title">+919347915376</div>
+                            <div class="sub-title">+91 9030621769</div>
                         </div>
                     </div>
                 </div>
